<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_item_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:gravity="start|center_vertical"
        android:textStyle="bold"
        android:text="@string/dummy_date"/>
    <RelativeLayout
        android:id="@+id/rl_circle_holder"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/tv_date">
        <View
            android:id="@+id/view_top_line"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/view_circle"
            android:background="@color/gray"/>
        <View
            android:id="@+id/view_circle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/gray_circle"
            android:layout_centerInParent="true"/>
        <View
            android:id="@+id/view_bottom_line"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/view_circle"
            android:background="@color/gray"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/rl_circle_holder"
        android:layout_toStartOf="@+id/tv_terms"
        android:gravity="center"
        android:textStyle="bold"

        android:text="@string/demo_amount"/>
    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/demo_term"/>
</RelativeLayout>