<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlanActivity">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:gravity="start|center_vertical"
            android:onClick="onClose">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_arrow_back_black"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/plan_header"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/rl_header"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:text="@string/order_amount"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/tv_order_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/demo_amount"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/tv_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loan_provider"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:text="@string/down_payment"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/tv_down_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/demo_amount"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4">
            <RelativeLayout
                android:id="@+id/rl_dp_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/item_background">
                <TextView
                    android:id="@+id/tv_dp_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/dp_1"/>
                <ImageView
                    android:id="@+id/iv_blue_tick_dp_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/blue_triangle"
                    android:visibility="invisible"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_dp_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/item_background">
                <TextView
                    android:id="@+id/tv_dp_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/dp_2"/>

                <ImageView
                    android:id="@+id/iv_blue_tick_dp_2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/blue_triangle"
                    android:visibility="invisible"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_dp_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/item_background">
                <TextView
                    android:id="@+id/tv_dp_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/dp_3"/>
                <ImageView
                    android:id="@+id/iv_blue_tick_dp_3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/blue_triangle"
                    android:visibility="invisible"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_dp_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/item_background">
                <TextView
                    android:id="@+id/tv_dp_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/dp_4"/>
                <ImageView
                    android:id="@+id/iv_blue_tick_dp_4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/blue_triangle"
                    android:visibility="invisible"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:text="@string/monthly_payment"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/tv_emi_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/demo_term"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">
            <RelativeLayout
                android:id="@+id/rl_terms_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/item_background">
                <TextView
                    android:id="@+id/tv_terms_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/terms_1"/>
                <ImageView
                    android:id="@+id/iv_blue_tick_mp_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/blue_triangle"
                    android:visibility="invisible"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_terms_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/item_background">
                <TextView
                    android:id="@+id/tv_terms_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/terms_2"/>
                <ImageView
                    android:id="@+id/iv_blue_tick_mp_2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/blue_triangle"
                    android:visibility="invisible"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_terms_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/item_background">
                <TextView
                    android:id="@+id/tv_terms_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/terms_3"/>
                <ImageView
                    android:id="@+id/iv_blue_tick_mp_3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/blue_triangle"
                    android:visibility="invisible"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:text="@string/monthly_payment"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/tv_emi_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/demo_amount"
                android:textColor="@color/primary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:onClick="onNext">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>

</RelativeLayout>